name:                sqlite-transactional
version:             0.1.0.0
--synopsis:            A transaction monad
description:         Please see README.md
homepage:            https://github.com/frms-/sqlite-transactional#readme
license:             MIT
license-file:        LICENSE
author:              Fredrik Malmros
maintainer:          fredrik.malmros@gmail.com
copyright:           Copyright: (c) 2016 Fredrik Malmros
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.SQLite.Transaction
  build-depends:       base >= 4.7 && < 5,
                       sqlite,
                       mtl
  default-language:    Haskell2010
  ghc-options:         -Wall
  Extra-Libraries: sqlite3
source-repository head
  type:     git
  location: https://github.com/frms-/sqlite-transactional
